--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             is lehet.</p>
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="assets/pic1.jpg" alt="">
+          <img src="pic1.jpg" alt="">
         </div>
       </div>
     </section>
