--- a/second.html
+++ b/second.html
@@ -71,7 +71,7 @@
             inkább gyakorolni vele.</p>
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="assets/pic2.jpg">
+          <img src="pic2.jpg">
         </div>
       </div>
       <div class="whitespace"></div>
@@ -121,7 +121,7 @@
             Roxie-nak hogy sajnálja amit mondott, izgatott az új baba miatt, és kibékülnek.</p>
         </div>
         <div class="col-md-4">
-          <img src="assets/pic3.jpg">
+          <img src="pic3.jpg">
         </div>
       </div>
     </section>
