--- a/actors.html
+++ b/actors.html
@@ -56,7 +56,7 @@
             
             <div class="card-body">
               <h5 class="card-title">Kevin James - Eric Lamonsoff</h5>
-              <img src="assets/james.jpg">
+              <img src="james.jpg">
               
             </div>
           </div>
@@ -64,21 +64,21 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Chris Rock - Kurt McKenzie</h5>
-              <img src="assets/chris.jpeg">
+              <img src="chris.jpeg">
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">David Spade - Marcus Higgins</h5>
-              <img src="assets/david.jpg">
+              <img src="david.jpg">
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Shaquille O’Neal - Officer Fluzzo</h5>
-              <img src="assets/oneil.jpg">
+              <img src="oneil.jpg">
             </div>
           </div>
 
